--- a/style.css
+++ b/style.css
@@ -1,7 +1,23 @@
 header{
-    background-color: rgb(0, 0, 0);
-    color: aliceblue
+.cabecalho-imagem{width:20%;
+}
+*{
+    margin: 0;
+    padding: 0;
+}
+.cabecalho{
+    background-color: hotpink;
+    color: aliceblue;
+    display: flex;
+    justify-content: space-around;
+    padding: 24px 0;
 }
 
-.cabecalho-imagem{width:20%;
+.cabecalho-imagem{width: 20%;
+}
+
+.cabecalho-lista-item{
+    display: inline-block;
+    margin: 0 16px;
+    padding: 24px 0;
 }
