--- a/style.css
+++ b/style.css
@@ -1,23 +1,23 @@
-header{
-.cabecalho-imagem{width:20%;
-}
 *{
     margin: 0;
     padding: 0;
 }
+
 .cabecalho{
-    background-color: hotpink;
-    color: aliceblue;
+    background-color: #383D58;
+    color: #FFFFFF;
     display: flex;
     justify-content: space-around;
     padding: 24px 0;
 }
 
-.cabecalho-imagem{width: 20%;
+.cabecalho-imagem{
+    width: 20%;
 }
 
 .cabecalho-lista-item{
     display: inline-block;
     margin: 0 16px;
     padding: 24px 0;
+    font-size: 24px;
 }
